<resources>
    <string name="app_name">Sport Network</string>
    <string name="title_activity_home">Cộng đồng thể thao</string>
    <string name="title_activity_login">Đăng Nhập</string>
    <string name="title_activity_chat">Chat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="prompt_email_or_phone">Số điện thoại (Hoặc email)</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="prompt_repassword">Nhập lại mật khẩu</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email </string>
    <string name="wrong_fill_data">Dữ liệu nhập không đúng</string>

    <!-- Login-->
    <string name="forget_pwd"><u>Quên mật khẩu?</u></string>
    <string name="create_account"><u>Tạo tài khoản mới</u></string>
    <string name="title_activity_new_account">Tạo tài khoản mới</string>
    <string name="full_name">Tên đầy đủ </string>
    <string name="display_name">Tên hiển thị</string>
    <string name="nick_name">Biệt danh </string>
    <string name="email">Email </string>
    <string name="address">Địa chỉ </string>
    <string name="birthday">Ngày sinh </string>
    <string name="sex">Giới tính </string>
    <string name="register">Đăng ký </string>
    <string name="title_activity_profile">Thông tin cá nhân</string>
    <string name="in_progress">Đang xử lý</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="error">Lỗi</string>
    <string name="close">Đóng</string>
    <string name="user_collision_exception">Email này đã được sử dụng bởi một tài khoản khác !</string>
    <string name="facebook_app_id">664109537069553</string>
    <string name="fb_login_protocol_scheme">fb664109537069553</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sport_field">Sân thi đấu</string>
    <string name="place">Địa điểm</string>
    <string name="clubs">Clubs</string>
    <string name="sport_market">Thị trường</string>
    <string name="friendly_match">Giao hữu</string>
    <string name="sport_club">Câu lạc bộ</string>
    <string name="time_open">GIỜ MỞ CỬA</string>
    <string name="call">Gọi</string>
    <string name="field_types">CÁC LOẠI SÂN THI ĐẤU</string>
    <string name="title_activity_location_search">Tìm sân</string>
    <string name="search_saved">Đã lưu</string>
    <string name="search_all">Tất cả</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="post_entry">Đăng tin</string>
    <string name="name">Tên</string>
    <string name="info">Thông tin</string>
    <string name="footballer">Cầu thủ</string>
    <string name="photo">Hình ảnh</string>
    <string name="member_number">Số thành viên</string>
    <string name="contact">Liên hệ</string>
    <string name="favourite_location">Khu vực hay đá</string>
    <string name="level">Cấp độ</string>
    <string name="found_date">Tham gia từ</string>
    <string name="intro">Giới thiệu</string>

    <string-array name="positions">
        <item>Không yêu cầu</item>
        <item>Tiền đạo</item>
        <item>Tiền vệ</item>
        <item>Hậu vệ</item>
        <item>Trung vệ</item>
        <item>Thủ môn</item>
        <item>Huấn luyện viên</item>
    </string-array>

    <string-array name="member_level">
        <item>Không yêu cầu</item>
        <item>Biết đá</item>
        <item>Trung bình</item>
        <item>Trung bình khá</item>
        <item>Khá</item>
        <item>Giỏi</item>
        <item>Chuyên nghiệp</item>
    </string-array>
    <string name="title_activity_group_detail">Thông tin FC</string>

    <string name="search_hint">Search</string>
    <string name="search_field_hint">Tìm sân</string>
    <string name="search_club_hint">Tìm nhóm</string>
    <string name="search_match_hint">Tìm kèo</string>
    <string name="create_friendly_match">Tạo kèo giao hữu</string>
    <string name="search_user_hint">Tìm kiếm theo tên</string>

    <string name="select_avatar">Chọn ảnh đại diện</string>
    <string name="failed_doagain">Thất bại, vui lòng thử lại !</string>

    <string-array name="vn_provinces">
        <item>TP HCM</item>
        <item>Hà Nội</item>
        <item>Cần Thơ</item>
        <item>Đà Nẵng</item>
        <item>Hải Phòng</item>
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
        <item>Phú Yên</item>
    </string-array>

    <!-- Chats -->
    <string name="chats">Tin nhắn</string>
    <string name="no_chats">Bạn chưa có tin nhắn nào!</string>
    <string name="new_chat">Tin nhắn mới</string>
    <string name="message_to">Tới: </string>
    <string name="enter_chat">Đang vào chat</string>
    <string name="max_user_exceed">Số thành viên tối đa một nhóm là %d!</string>
    <string name="delete_chat">Xoá trò chuyện</string>
    <string name="loading_recent_chat">Đang tải tin nhắn</string>
    <string name="one_is_typing">{0} đang soạn tin nhắn...</string>
    <string name="two_are_typing">{0} và {1} đang soạn tin nhắn...</string>
    <string name="one_and_others_are_typing">{0} và {1} người khác đang soạn tin nhắn...</string>

    <!--Map-->
    <string name="map_not_ready">Map Not Ready</string>
    <string name="drag_melbourne">drag_melbourne</string>
    <string name="flat">flat</string>
    <string name="rotation">rotation</string>
    <string name="clear_map">clear_map</string>
    <string name="reset_map">reset_map</string>
    <string name="default_info_window">default_info_window</string>
    <string name="custom_info_contents">custom_info_contents</string>
    <string name="custom_info_window">custom_info_window</string>
    <string name="no_location_detected">Không xác định được vị trí hiện tại!</string>


</resources>
